<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/cdly_add_root"
        tools:context="com.danthecodinggui.recipes.view.AddRecipeActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lly_toolbar_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="vertical"
                android:elevation="5dp"
                android:background="@color/backToolbar">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/tbar_add"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/backToolbar"/>

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/imv_image_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:elevation="2dp"
                        android:layout_margin="5dp"
                        android:src="@drawable/ic_close"
                        android:onClick="RemoveImage"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_gravity="top"
                        android:background="@drawable/top_scrim"
                        android:elevation="1dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <ImageView
                        android:id="@+id/imv_add_image"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:src="@drawable/sample_image" />
                </android.support.constraint.ConstraintLayout>

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/cly_add_tbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:paddingTop="15dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="5dp"
                    android:paddingBottom="15dp"
                    android:background="@color/backToolbar">

                    <EditText
                        android:id="@+id/editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        android:singleLine="true"
                        android:background="@android:color/transparent"
                        android:hint="@string/etxt_hint_addTitle"
                        android:inputType="textNoSuggestions|textVisiblePassword"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/but_kcal"
                        style="@style/AddRecipeClickable"
                        android:visibility="gone"
                        android:onClick="AddKcal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editText"
                        app:layout_constraintVertical_bias="0.0">

                        <TextView
                            android:id="@+id/txt_kcal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            tools:text="340 Kcal" />
                        <ImageView
                            style="@style/EditTextViewIcon" />
                        <ImageButton
                            style="@style/AddRecipeRemoveButton"
                            android:onClick="RemoveKcal" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/but_time"
                        style="@style/AddRecipeClickable"
                        android:visibility="gone"
                        android:onClick="AddTime"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editText">

                        <TextView
                            android:id="@+id/txt_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            tools:text="20 Minutes" />
                        <ImageView
                            style="@style/EditTextViewIcon" />
                        <ImageButton
                            style="@style/AddRecipeRemoveButton"
                            android:onClick="RemoveDuration" />
                    </LinearLayout>
                </android.support.constraint.ConstraintLayout>
            </LinearLayout>


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </ScrollView>
        </LinearLayout>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_add_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add"
            app:fabSize="normal"
            android:focusable="false"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:onClick="AnimateFabMenu"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_add_photo"
            style="@style/FabMenuItem"
            android:layout_margin="70dp"
            android:src="@drawable/ic_photo"
            android:onClick="addPhoto" />
        <TextView
            android:id="@+id/txt_add_photo"
            style="@style/FabTag"
            android:layout_marginBottom="77dp"
            android:layout_marginEnd="119dp"
            android:text="@string/txt_add_photo"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_add_time"
            style="@style/FabMenuItem"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="86dp"
            android:src="@drawable/ic_time"
            android:onClick="AddTime"/>
        <TextView
            android:id="@+id/txt_add_time"
            style="@style/FabTag"
            android:layout_marginBottom="17dp"
            android:layout_marginEnd="135dp"
            android:text="@string/txt_add_time"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_add_kcal"
            style="@style/FabMenuItem"
            android:layout_marginBottom="86dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_kcal"
            android:onClick="AddKcal"/>
        <TextView
            android:id="@+id/txt_add_kcal"
            style="@style/FabTag"
            android:layout_marginBottom="135dp"
            android:layout_marginEnd="10dp"
            android:text="@string/txt_add_kcal"/>
    </android.support.design.widget.CoordinatorLayout>
</layout>
